2015-02-12 Roman
- !!!!:SYS:
    Classes TTipBD, TTipDAQ, TTipParam, TTipArchivator, TTipTransport  renamed to TTypeBD, TTypeDAQ, TTypeParam, TTypeArchivator, TTypeTransport at last.
    Source tree's files ttipdaq.h, ttipdaq.cpp, ttiparam.h renamed to ttypedaq.h, ttypedaq.cpp, ttypeparam.h.
    Core library version rised to 3:3:0.
    DB subsystem type modules version rised to 7.
    DAQ subsystem type modules version rised to 8.
    Archive subsystem type modules version rised to 7.
    Transports subsystem type modules version rised to 7.
- !!!!:Transport.Sockets: Initiative connection for input transport types TCP and UNIX support is added
    when the input transport do not wait a connection from remote but self connected and continue waiting request by the established connection.


2015-02-10 Roman
- DB: LibsDB.vcaBase.db: Main.cntrPaspExt expanded for allow text's attributes edit into multiline.
- FIX:UI.Vision: Prevented hang at zero length from center to first radius. Some trivial fixes.


2015-02-07 Roman
- DAQ.OPC_UA: OpcUa_BadMessageNotAvailable service error is added and used for service "RepublishRequest".


2015-02-06 Roman
- DB: LibsDB.vcaBase.db: Main.{grpGraph,grpGraph10}: Adapted for Logical scale control for individual parameters to Diagram type "XY" specific.
    Model.{AGLKS,Boiler}: Control panel's copy for graphs Main.grph_panel some fixed into the project.


2015-02-05 Roman
- DB: LibsDB.vcaBase.db: Control panel for graphs Main.grph_panel expanded for XY type select allow and the scaling by X allow.
- DAQ.OPC_UA: Addition debug messages is added to service TranslateBrowsePathsToNodeIdsRequest.
- UI.VCAEngine.Diagram: Cursor attributes "curSek", "curUSek", "curColor" set allowed for all types.
    Attribute "sclHor" set to generic for all types.
- UI.{Vision,WebVision}.Diagram: Attribute "prm{N}val" set to curent value for type XY is added.
    Also set "curSek" and "curUSek" to curent value time.