@@ -1,7 +1,7 @@
 
 //OpenSCADA system module DAQ.OPC_UA file: mod_prt.cpp
 /***************************************************************************
- *   Copyright (C) 2009-2014 by Roman Savochenko, <rom_as@oscada.org>      *
+ *   Copyright (C) 2009-2015 by Roman Savochenko, <rom_as@oscada.org>      *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -61,6 +61,7 @@ TProt::TProt( string name ) : TProtocol(PRT_ID)
     mEndPntEl.fldAdd(new TFld("SecPolicies",_("Security policies"),TFld::String,TFld::FullText,"100","None:0\nBasic128Rsa15:1"));
     mEndPntEl.fldAdd(new TFld("ServCert",_("Server certificate (PEM)"),TFld::String,TFld::FullText,"10000"));
     mEndPntEl.fldAdd(new TFld("ServPvKey",_("Server private key (PEM)"),TFld::String,TFld::FullText,"10000"));
+    mEndPntEl.fldAdd(new TFld("A_PRMS",_("Addition parameters"),TFld::String,TFld::FullText,"10000"));
 }
 
 TProt::~TProt( )			{ nodeDelAll(); }
@@ -239,7 +240,7 @@ bool TProtIn::mess( const string &reqst, string &answ )
 OPCEndPoint::OPCEndPoint( const string &iid, const string &idb, TElem *el ) :
     TConfig(el), EP(modPrt), mId(cfg("ID")), mName(cfg("NAME")), mDescr(cfg("DESCR")), mURL(cfg("URL")),
     mSerType(cfg("SerialzType").getId()), mAEn(cfg("EN").getBd()),
-    mDB(idb)
+    mDB(idb), mLimSubScr(10), mLimMonitItms(1000), mLimRetrQueueTm(0)
 {
     mId = iid;
     mURL = "opc.tcp://"+SYS->host();
@@ -313,6 +314,16 @@ void OPCEndPoint::load_( )
     mSec.clear();
     for(int off = 0; (spi=TSYS::strParse(sp,0,"\n",&off)).size(); )
 	mSec.push_back(UA::SecuritySetting(TSYS::strParse(spi,0,":"),s2i(TSYS::strParse(spi,1,":"))));
+
+    //Addition parameters load
+    try {
+	XMLNode	prmNd;
+	string	vl;
+	prmNd.load(cfg("A_PRMS").getS());
+	vl = prmNd.attr("LimSubScr");		if(!vl.empty()) setLimSubScr(s2i(vl));
+	vl = prmNd.attr("LimMonitItms");	if(!vl.empty()) setLimMonitItms(s2i(vl));
+	vl = prmNd.attr("LimRetrQueueTm");	if(!vl.empty()) setLimRetrQueueTm(s2i(vl));
+    } catch(...){ }
 }
 
 void OPCEndPoint::save_( )
@@ -323,6 +334,13 @@ void OPCEndPoint::save_( )
     for(unsigned i_p = 0; i_p < mSec.size(); i_p++)
 	sp += mSec[i_p].policy + ":" + i2s(mSec[i_p].messageMode)+"\n";
     cfg("SecPolicies").setS(sp);
+
+    //Addition parameters save
+    XMLNode prmNd("prms");
+    prmNd.setAttr("LimSubScr", i2s(limSubScr()));
+    prmNd.setAttr("LimMonitItms", i2s(limMonitItms()));
+    prmNd.setAttr("LimRetrQueueTm", i2s(limRetrQueueTm()));
+    cfg("A_PRMS").setS(prmNd.save(XMLNode::BrAllPast));
 
     SYS->db().at().dataSet(fullDB(),owner().nodePath()+tbl(),*this);
 }
@@ -637,6 +655,7 @@ void OPCEndPoint::cntrCmdProc( XMLNode *opt )
 	    }
 	    if(ctrMkNode("area",opt,-1,"/ep/cfg",_("Configuration"))) {
 		TConfig::cntrCmdMake(opt,"/ep/cfg",0,"root",SPRT_ID,RWRWR_);
+		ctrRemoveNode(opt, "/ep/cfg/A_PRMS");
 		ctrMkNode("fld",opt,-1,"/ep/cfg/ServCert",cfg("ServCert").fld().descr(),RWRW__,"root",SPRT_ID,3,"tp","str","cols","90","rows","7");
 		ctrMkNode("fld",opt,-1,"/ep/cfg/ServPvKey",cfg("ServPvKey").fld().descr(),RWRW__,"root",SPRT_ID,3,"tp","str","cols","90","rows","7");
 		ctrRemoveNode(opt,"/ep/cfg/SecPolicies");
@@ -646,6 +665,13 @@ void OPCEndPoint::cntrCmdProc( XMLNode *opt )
 		    ctrMkNode("list",opt,-1,"/ep/cfg/secPlc/1",_("Message mode"),RWRWR_,"root",SPRT_ID,4,"tp","dec","dest","select","sel_id","1;2;3","sel_list",_("None;Sign;Sign&Encrypt"));
 		}
 	    }
+	    if(ctrMkNode("area",opt,-1,"/data",_("Data")))
+		if(ctrMkNode("area",opt,-1,"/data/lim",_("Limits"))) {
+		    ctrMkNode("fld",opt,-1,"/data/lim/subScr",_("Subscriptions"),RWRWR_,"root",SPRT_ID,1,"tp","dec");
+		    ctrMkNode("fld",opt,-1,"/data/lim/monitItms",_("Monitored items"),RWRWR_,"root",SPRT_ID,1,"tp","dec");
+		    ctrMkNode("fld",opt,-1,"/data/lim/retrQueueTm",_("Retransmission queue time, sek."),RWRWR_,"root",SPRT_ID,2,
+			"tp","dec", "help",_("Set to 0 for automatic by cntrKeepAlive*publInterv"));
+		}
 	}
 	return;
     }
@@ -692,5 +718,17 @@ void OPCEndPoint::cntrCmdProc( XMLNode *opt )
 	}
     }
     else if(a_path.compare(0,7,"/ep/cfg") == 0) TConfig::cntrCmdProc(opt, TSYS::pathLev(a_path,2), "root", SPRT_ID, RWRWR_);
+    else if(a_path == "/data/lim/subScr") {
+	if(ctrChkNode(opt,"get",RWRWR_,"root",SPRT_ID,SEC_RD))	opt->setText(i2s(limSubScr()));
+	if(ctrChkNode(opt,"set",RWRWR_,"root",SPRT_ID,SEC_WR))	setLimSubScr(s2i(opt->text()));
+    }
+    else if(a_path == "/data/lim/monitItms") {
+	if(ctrChkNode(opt,"get",RWRWR_,"root",SPRT_ID,SEC_RD))	opt->setText(i2s(limMonitItms()));
+	if(ctrChkNode(opt,"set",RWRWR_,"root",SPRT_ID,SEC_WR))	setLimMonitItms(s2i(opt->text()));
+    }
+    else if(a_path == "/data/lim/retrQueueTm") {
+	if(ctrChkNode(opt,"get",RWRWR_,"root",SPRT_ID,SEC_RD))	opt->setText(i2s(limRetrQueueTm()));
+	if(ctrChkNode(opt,"set",RWRWR_,"root",SPRT_ID,SEC_WR))	setLimRetrQueueTm(s2i(opt->text()));
+    }
     else TCntrNode::cntrCmdProc(opt);
 }
